WIP refactor and fix valintalaskenta-laskenta-service tests